--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h2>Vehicle No: <p>F-150</p></h2>
 <h2>Order No: <p>P958 </p></h2>
 <h2>FIN: <p>QB639</p></h2>
-<a href = "../file/FordProOVP-Doc1.pdf" download = "file">  
+<a href = "../Demo/file/FordProOVP-Doc1.pdf" download = "file">  
     <b> download File  </b> 
    </a>  
 
