--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <h2>Vehicle No: <p>F-150</p></h2>
 <h2>Order No: <p>P958 </p></h2>
 <h2>FIN: <p>QB639</p></h2>
+<h2>Dealer Code: <p>11080</p> </h2>
 <a href = "Demo/file/FordProOVP-Doc1.pdf" download>  
     <b> download File  </b> 
    </a>  
