--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <h2>FIN: <p>QB639</p></h2>
 <h2>Dealer Code: <p>11080</p> </h2>
 <a href = "Demo/file/FordProOVP-Doc1.pdf" download>  
-    <b> download File  </b> 
+    <button> download File  </button> 
    </a>  
 
 
